--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,8 @@ jobs:
     - name: Download SVG file
       run: curl -o /tmp/trophy.svg "https://github-profile-trophy.vercel.app/?username=iach526526&theme=radical&row=1"
 
-    - name: Remove lines 490 to 535 from SVG
-      run: sed '490,535d' /tmp/trophy.svg > /tmp/trophy_modified.svg
+    - name: Remove lines 741 to 839 from SVG
+      run: sed '761,839d' /tmp/trophy.svg > /tmp/trophy_modified.svg
 
     - name: Base64 encode the modified SVG
       id: base64_encode
@@ -43,8 +43,8 @@ jobs:
 
     - name: Commit and push changes
       run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git config --global user.name 'GitHub Action'
+        git config --global user.email 'action@github.com'
         git add img/trophy.svg img/marquee.svg
         git commit -m "Update SVG and marquee.svg every two days"
         git push
