--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,8 +46,9 @@ jobs:
         git config --global user.name 'GitHub Action'
         git config --global user.email 'action@github.com'
         git add img/trophy.svg img/marquee.svg
+        git remote add origin https://github.com/iach526526/iach526526.git
         git commit -m "Update SVG and marquee.svg every two days"
-        git push
+        git push -u origin main
       env:
         GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
         REPO_URL: https://github-actions[bot]:${{ secrets.PAT_TOKEN }}@github.com/iach526526/iach526526.git
