--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,6 @@ jobs:
         git config --global user.email 'action@github.com'
         git add img/trophy.svg img/marquee.svg
         git commit -m "Update SVG and marquee.svg every two days"
-        git push -u origin main
+        git push https://github-actions[bot]:${{ secrets.PAT_TOKEN }}@github.com/iach526526/iach526526.git HEAD:main
       env:
         GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
-        REPO_URL: https://github-actions[bot]:${{ secrets.PAT_TOKEN }}@github.com/iach526526/iach526526.git
