--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
         git config --global user.name 'GitHub Action'
         git config --global user.email 'action@github.com'
         git add img/trophy.svg img/marquee.svg
-        git commit -m "$(date +'%Y-%m-%d %H:%M:%S') Update SVG and marquee"
+        git commit -m "GitHub Action"
         git pull
         git push https://github-actions[bot]:${{ secrets.PAT_TOKEN }}@github.com/iach526526/iach526526.git HEAD:main
       env:
