--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,13 +20,10 @@ jobs:
     - name: Download SVG file
       run: curl -o /tmp/trophy.svg "https://github-profile-trophy.vercel.app/?username=iach526526&theme=radical&row=1"
 
-    - name: Remove lines 741 to 839 from SVG
-      run: sed '761,839d' /tmp/trophy.svg > /tmp/trophy_modified.svg
-
     - name: Base64 encode the modified SVG
       id: base64_encode
       run: |
-        base64 /tmp/trophy_modified.svg | tr -d '\n' > /tmp/trophy_base64.txt
+        base64 /tmp/trophy.svg | tr -d '\n' > /tmp/trophy_base64.txt
 
     - name: Read Base64 content into a variable
       id: read_base64
@@ -42,7 +39,7 @@ jobs:
       run: mkdir -p img
 
     - name: Move modified SVG to img directory
-      run: mv /tmp/trophy_modified.svg img/trophy.svg
+      run: mv /tmp/trophy.svg img/trophy.svg
 
     - name: Check for changes
       id: git-diff
